--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@xata.io/netlify": "^0.1.0"
   }
 }
