--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@xata.io/netlify": "^0.1.0"
+    "@xata.io/netlify": "^0.0.0-alpha.v39f1f33"
   }
 }
